# Text-Editor

./: CMakeLists.txt  README.md  run.sh
inc/: Editor.hpp  File.hpp  User.hpp
res/: file.txt
src/: Editor.cpp  File.cpp  User.cpp  main.cpp
